--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
         
 
         <div class="mainContent">
-            <img src="./Group 2.png" alt="" id="img1">
-            <img src="./Layer 2.png" alt="" id="img2">
-            <img src="./Layer 2 (4).png" alt="" id="img3">
-            <img src="./Layer 2 (3).png" alt="" id="img4">
-            <img src="./Layer 2 (2).png" alt="" id="img5">
-            <img src="./Layer 2 (6).png" alt="" id="img6">
-            <img src="./Layer 2 (1).png" alt="" id="img7">
-            <img src="./Layer 2 (7).png" alt="" id="img8">
+            <img src="./Group 2.png" alt="" id="img1" id="bouncing">
+            <img src="./Layer 2.png" alt="" id="img2" id="bouncing">
+            <img src="./Layer 2 (4).png" alt="" id="img3" id="bouncing">
+            <img src="./Layer 2 (3).png" alt="" id="img4" id="bouncing">
+            <img src="./Layer 2 (2).png" alt="" id="img5" id="bouncing">
+            <img src="./Layer 2 (6).png" alt="" id="img6" id="bouncing">
+            <img src="./Layer 2 (1).png" alt="" id="img7" id="bouncing">
+            <img src="./Layer 2 (7).png" alt="" id="img8" id="bouncing">
             <img src="./Vector.png" alt="" id="lecrnr">
             <div id="mainBox">
                 <h1>Let's get to know <br> our solar system <br> galaxy</h1>
@@ -117,9 +117,9 @@
         <img src="./Clip path group (3).png" class="combg">
         <img src="./Clip path group (4).png" class="combg">
         <div id="merimg">
-            <img src="/Ellipse 3 (1).png" alt="" class="mimg" id="mi1">
-            <img src="./Ellipse 2 (1).png" alt="" class="mimg" id="mi2">
-            <img src="./Group (1).png" alt="" class="mimg" id="mi3">
+            <img src="/Ellipse 3 (1).png" alt="" class="mimg" id="mi1" id="bouncing">
+            <img src="./Ellipse 2 (1).png" alt="" class="mimg" id="mi2" id="bouncing">
+            <img src="./Group (1).png" alt="" class="mimg" id="mi3" id="bouncing">
         </div>
         <div class="mercont">
             <div id="merinfo">
@@ -156,9 +156,9 @@
         <img src="./Clip path group (3).png" class="combg">
         <img src="./Clip path group (4).png" class="combg">
         <div id="venimg">
-            <img src="./Layer 2 (8).png" alt="">
-            <img src="./Ellipse 2.png" alt="">
-            <img src="./Ellipse 3.png" alt="">
+            <img src="./Layer 2 (8).png" class="vbounce">
+            <img src="./Ellipse 2.png" class="vbounce">
+            <img src="./Ellipse 3.png" class="vbounce">
         </div>
         <div id="vencont">
             <div id="main">
@@ -227,13 +227,13 @@
     </div>
     
     <div class="Mars" id="Mars">
-        <img src="./Clip path group (3).png" class="combg" id="marbg">
-        <img src="./Clip path group (4).png" class="combg" id="marbg">
-        <img src="Group 9.png" alt="">
+            <img src="./Clip path group (3).png" class="combg" id="marbg">
+            <img src="./Clip path group (4).png" class="combg" id="marbg">
+            <img src="Group 9.png" class="mbounce">
         <div class="marmoons">
-            <!-- <div id="arrrimg"> -->
-                <img src="Vector (5).png" alt="">
-            <!-- </div> -->
+            <div class="mbounce">
+                <img src="Vector (5).png">
+            </div>
             <div class="marmooncont">
                 <h1>Martial Moons</h1>
                 <p>Mars has two small moons, Phobos and <br> Deimos, which are irregularly shaped and <br> thought to be captured asteroids.</p>
@@ -273,7 +273,7 @@
     <div class="Jupiter" id="Jupiter">
         <img src="./Clip path group (3).png" class="combg">
         <img src="./Clip path group (4).png" class="combg">
-        <img src="Layer 2 (10).png" alt="">
+        <img src="Layer 2 (10).png" id="jupig">
         <div id="jupcont">
             <div id="main">
                 <h1>5. Jupiter</h1>
@@ -302,7 +302,7 @@
     <div class="Saturn" id="Saturn">
         <img src="./Clip path group (3).png" class="combg">
         <img src="./Clip path group (4).png" class="combg">
-        <img src="Group 10.png" alt="">
+        <img src="Group 10.png" id="bouncing">
         <div id="satcont">
             <div id="main">
                 <h1>6. Saturn</h1>
@@ -330,7 +330,7 @@
     <div class="Uranus" id="Uranus">
         <img src="./Clip path group (3).png" class="combg">
         <img src="./Clip path group (4).png" class="combg">
-        <img src="Group 11.png" alt="">
+        <img src="Group 11.png" class="ubounce">
         <div id="urcont">
             <div id="main">
                 <h1>7. Uranus</h1>
@@ -357,8 +357,8 @@
     </div>
 
     <div class="Neptune" id="Neptune">
-        <img src="./Clip path group (3).png" class="combg" id="nepbg">
-        <img src="./Clip path group (4).png" class="combg" id="nepbg">
+        <img src="./Clip path group (3).png" class="combg" id="nepbg" id="bouncing">
+        <img src="./Clip path group (4).png" class="combg" id="nepbg" id="bouncing">
         <div id="neptcont">
             <div id="cont1">
                 <h1>8. Neptune</h1>
@@ -388,14 +388,14 @@
             </div>
         </div>
         <div id="nimg">
-            <img src="Group 12.png" alt="">
+            <img src="Group 12.png" class="nbounce">
         </div>
     </div>
 
     <div class="Footer">
         <img src="./Clip path group (3).png" class="combg" id="footbg">
         <img src="./Clip path group (4).png" class="combg" id="footbg">
-        <img src="Group 16.png" alt="">
+        <img src="Group 16.png" class="fbounce">
         <div id="futar">
             <div id="foot1">
                 <h1>join the education community</h1>
